Добавлен IP адрес сервера в network security config для Android

--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -10,6 +10,7 @@
     <!-- Разрешаем все домены -->
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">arabica26.ru</domain>
+        <domain includeSubdomains="true">62.113.41.32</domain>
         <domain includeSubdomains="true">localhost</domain>
         <domain includeSubdomains="true">127.0.0.1</domain>
         <domain includeSubdomains="true">10.0.2.2</domain>
